k8s/ingress/api-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gobank-api
  namespace: gobank
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: gobank.local
      http:
        paths:
          - path: /auth(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: auth
                port:
                  number: 8080
          - path: /wallet(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: wallet
                port:
                  number: 8080
